--- a/video.html
+++ b/video.html
@@ -1,9 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>JavaScript Video Controls</title>
 	<link rel="stylesheet" type="text/css" href="css/video.css">
+	<script src="js/video.js"></script>
 </head>
 <body> 
 <main>
